--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -14,7 +14,7 @@ default_find_mode = "wrapped"
 header_text_scrolling = "yes"
 fetch_lyrics_for_current_song_in_background = "yes"
 follow_now_playing_lyrics = "yes"
-mpd_music_dir = "/var/lib/mpd/music"
+mpd_music_dir = "/var/lib/mpd/media"
 visualizer_fifo_path = "/tmp/mpd.fifo"
 visualizer_output_name = "Visualizer Output"
 visualizer_in_stereo = "yes"
