--- a/i3/config
+++ b/i3/config
@@ -105,7 +105,7 @@ bindsym $mod+Shift+minus move scratchpad
 exec --no-startup-id ~/.fehbg
 exec --no-startup-id polybar majesty
 exec --no-startup-id dunst
-exec --no-startup-id compton --blur-background --blur-background-frame
+exec --no-startup-id compton
 
 
 #name			border	bg	text	indicator child_border
